added seach bar and deals of the day

--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -15,10 +15,26 @@
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">Plugins</a></li>
         <li><a href="#">Bundles</a></li>
-        <li class="right"><a href="#">SearchBar</a></li>
+        <li class="right"><input type="text" placeholder="Search"></li>
     </ul>
     <div id="content">
-        <h1>Deal of the Day</h1>
+        <div class="columns" id="deal-day">
+            <div class="column left-column" >
+                <div class="center">
+                    <h1>Deals of the Day</h1>
+                    <h4>The lowest price compared to the monthly average</h4>
+                </div>
+            </div>
+            <div class="column middle-column" >
+                <p>Deal 1</p>
+            </div>
+            <div class="column right-column">
+                <p>deal 2</p>
+            </div>
+        </div>
+
+
+        
     </div>
 </body>
 </html>
