--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -1,40 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Waves Price Tracker</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+	<head>
+        <title>Waves Price Tracker</title>
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <!-- jQuery and JS bundle w/ Popper.js -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	
 <body>
-    <ul class="header">
-        <li><a href="#">Logo</a></li>
-        <li class="right"><a href="#">Sign up</a></li>
-        <li class="right"><a href="#">Sign in</a></li>
-    </ul>
+<div id="content">
+	<!---------top bar-------------->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav">
+		<a class="navbar-brand" href="#">Logo</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-controls="header" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		
+		<div class="collapse navbar-collapse" id="header">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item"><a class="nav-link" href="#">Sign up</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Sign in</a></li>
+			</ul>
+		</div>
+	</nav>
 
-    <ul class="topnav">
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">Plugins</a></li>
-        <li><a href="#">Bundles</a></li>
-        <li class="right"><input type="text" placeholder="Search"></li>
-    </ul>
-    <div id="content">
-        <div class="columns" id="deal-day">
-            <div class="column left-column" >
-                <div class="center">
-                    <h1>Deals of the Day</h1>
-                    <h4>The lowest price compared to the monthly average</h4>
-                </div>
-            </div>
-            <div class="column middle-column" >
-                <p>Deal 1</p>
-            </div>
-            <div class="column right-column">
-                <p>deal 2</p>
-            </div>
-        </div>
+	<!--------------Menu bar---------->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav">
+		<a class="nav-link nav-item" href="#">Home</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="menu">
+			<ul class="navbar-nav header mr-auto">
+				<li class="nav-item"><a class="nav-link" href="#">Plugins</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Bundles</a></li>
+			</ul>
+			<input type="text" placeholder="Search">
+			<span class="bi-search"></span>
+		</div>
+	</nav>
 
+	<div id="daily-deals" class="mb-5">
+		<div class="flex-container">
+			<div class="card" style="width: 18rem;">
+				<img src="..." class="card-img-top" alt="...">
+				<div class="card-body">
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				</div>
+			  </div>
+			  <div class="card" style="width: 18rem;">
+				<img src="..." class="card-img-top" alt="...">
+				<div class="card-body">
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				</div>
+			  </div>
+		</div>
+	</div>
 
-        
-    </div>
+	<div id="footer">
+		<p>Created by WAVEZ</p>
+	</div>
+</div>	
 </body>
 </html>
