worked on the cards

--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -38,23 +38,45 @@
 				<li class="nav-item"><a class="nav-link" href="#">Plugins</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Bundles</a></li>
 			</ul>
-			<input type="text" placeholder="Search">
+			<input type="text" placeholder="Search" aria-label="Search">
 			<span class="bi-search"></span>
 		</div>
 	</nav>
-
+	<div id="banner">
+		<img src="images/early-bird-v2-d.jpg" alt="Promotional banner">
+	</div>
 	<div id="daily-deals" class="mb-5">
 		<div class="flex-container">
-			<div class="card" style="width: 18rem;">
-				<img src="..." class="card-img-top" alt="...">
+			<div class="card left-card">
+				<img src="images/tune-real-time.jpg" class="card-img-top" alt="plugin image">
 				<div class="card-body">
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<h2 class="card-header">Best Plugin Deal</h2>
+					<p class="card-text">Real Time Tune</p>
+					<p class="card-text">Average Price: $39.99</p>
+					<p class="card-text">Today's Price: $29.99</p>
+					<p class="star-rating">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-half.svg" alt="star half filled">
+					</p>
 				</div>
 			  </div>
-			  <div class="card" style="width: 18rem;">
-				<img src="..." class="card-img-top" alt="...">
+			  <div class="card">
+				<img src="images/diamond.png" class="card-img-top" alt="bundle image">
 				<div class="card-body">
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<h2 class="card-header">Best Bundle Deal</h2>
+					<p class="card-text">Diamond Bundle</p>
+					<p class="card-text">Average Price: $399.99</p>
+					<p class="card-text">Today's Price: $299.99</p>
+					<p class="star-rating">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star-fill.svg" alt="star filled">
+						<img src="bootstrap-icons/star.svg" alt="star half filled">
+					</p>
 				</div>
 			  </div>
 		</div>
