--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -11,9 +11,9 @@
 	</head>
 	
 <body>
-<div id="content">
+<div id="header">
 	<!---------top bar-------------->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav" id="logobar">
 		<a class="navbar-brand" href="#">Logo</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-controls="header" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -21,14 +21,63 @@
 		
 		<div class="collapse navbar-collapse" id="header">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a class="nav-link" href="#">Sign up</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Sign in</a></li>
+				<!--------------Signup---------------->
+				<li class="nav-item">
+					<div class="dropdown">
+						<a class="nav-link dropdown-toggle" type="button" id="signupMenu" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Sign up
+						</a>
+
+						<form class="dropdown-menu p-4 dropdown-menu-right" aria-labelledby="signupMenu">
+							<div class="form-group">
+							  <label for="Email2">Email address</label>
+							  <input type="email" class="form-control" id="Email2" placeholder="email@example.com">
+							</div>
+							<div class="form-group">
+							  <label for="Password2">Password</label>
+							  <input type="password" class="form-control" id="Password2" placeholder="Password">
+							</div>
+							<button type="submit" class="btn btn-primary">Sign up</button>
+						  </form>
+					</div>
+				</li>
+				<!-----------Sign in------------->
+				<li class="nav-item">
+					<div class="dropdown">
+						<a class="nav-link dropdown-toggle" type="button" id="signinMenu" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Sign in
+						</a>
+						<div class="dropdown-menu dropdown-menu-right">
+							<form class="px-4 py-3">
+							  <div class="form-group">
+								<label for="exampleDropdownFormEmail1">Email address</label>
+								<input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+							  </div>
+							  <div class="form-group">
+								<label for="exampleDropdownFormPassword1">Password</label>
+								<input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+							  </div>
+							  <div class="form-group">
+								<div class="form-check">
+								  <input type="checkbox" class="form-check-input" id="dropdownCheck">
+								  <label class="form-check-label" for="dropdownCheck">
+									Remember me
+								  </label>
+								</div>
+							  </div>
+							  <button type="submit" class="btn btn-primary">Sign in</button>
+							</form>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">New around here? Sign up</a>
+							<a class="dropdown-item" href="#">Forgot password?</a>
+						  </div>
+					</div>
+				</li>
 			</ul>
 		</div>
 	</nav>
-
 	<!--------------Menu bar---------->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav" id="navbar">
 		<a class="nav-link nav-item" href="#">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -42,15 +91,19 @@
 			<span class="bi-search"></span>
 		</div>
 	</nav>
+</div>
+
+	<!--Content of the page-->
+<div id="container">
 	<div id="banner">
 		<img src="images/early-bird-v2-d.jpg" alt="Promotional banner">
 	</div>
 	<div id="daily-deals" class="mb-5">
 		<div class="flex-container">
-			<div class="card left-card">
+			<div class="card left-card flex-container">
 				<img src="images/tune-real-time.jpg" class="card-img-top" alt="plugin image">
 				<div class="card-body">
-					<h2 class="card-header">Best Plugin Deal</h2>
+					<h2 class="card-title">Best Plugin Deal</h2>
 					<p class="card-text">Real Time Tune</p>
 					<p class="card-text">Average Price: $39.99</p>
 					<p class="card-text">Today's Price: $29.99</p>
@@ -63,10 +116,10 @@
 					</p>
 				</div>
 			  </div>
-			  <div class="card">
+			  <div class="card flex-container">
 				<img src="images/diamond.png" class="card-img-top" alt="bundle image">
 				<div class="card-body">
-					<h2 class="card-header">Best Bundle Deal</h2>
+					<h2 class="card-title">Best Bundle Deal</h2>
 					<p class="card-text">Diamond Bundle</p>
 					<p class="card-text">Average Price: $399.99</p>
 					<p class="card-text">Today's Price: $299.99</p>
@@ -81,10 +134,11 @@
 			  </div>
 		</div>
 	</div>
+</div>
 
-	<div id="footer">
-		<p>Created by WAVEZ</p>
-	</div>
+	<!-------Footer------------>
+<div id="footer">
+	<p>Created by WAVEZ</p>
 </div>	
 </body>
 </html>
