--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -11,9 +11,9 @@
 	</head>
 	
 <body>
-<div id="header">
+<div id="header" class="fixed-top">
 	<!---------top bar-------------->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav" id="logobar">
+    <nav class="navbar navbar-expand-lg navbar-dark topnav" id="logobar">
 		<a class="navbar-brand" href="#">Logo</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-controls="header" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -77,14 +77,30 @@
 		</div>
 	</nav>
 	<!--------------Menu bar---------->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark topnav" id="navbar">
+	<nav class="navbar navbar-expand-lg navbar-dark topnav ">
 		<a class="nav-link nav-item" href="#">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="menu">
 			<ul class="navbar-nav header mr-auto">
-				<li class="nav-item"><a class="nav-link" href="#">Plugins</a></li>
+				<li class="nav-item">
+					<div class="dropdown">
+						<a class="nav-link" href="#">Plugins</a>
+						<div class="dropdown-content">
+							<nav class="navbar navbar-expand-lg navbar-dark">
+								<ul class="navbar-nav">
+									<li class="nav-item"><a class="nav-link" href="#">All Plugins</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Equalizers</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Compressors</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Effects</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Limiters</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Others</a></li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</li>
 				<li class="nav-item"><a class="nav-link" href="#">Bundles</a></li>
 			</ul>
 			<input type="text" placeholder="Search" aria-label="Search">
@@ -94,7 +110,7 @@
 </div>
 
 	<!--Content of the page-->
-<div id="container">
+<div id="container" style="padding-top: 83px;">
 	<div id="banner">
 		<img src="images/early-bird-v2-d.jpg" alt="Promotional banner">
 	</div>
