finished home page
also started the plugins page

--- a/Wavez/Waves-Site/plugins.html
+++ b/Wavez/Waves-Site/plugins.html
@@ -79,7 +79,7 @@
 	</nav>
 	<!--------------Menu bar---------->
 	<nav class="navbar navbar-expand-lg navbar-dark topnav ">
-		<a class="nav-link nav-item" href="#">Home</a>
+		<a class="nav-link nav-item" href="index.html">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -101,12 +101,12 @@
 	<div class="dropdown-content">
 		<nav class="navbar navbar-expand-lg navbar-dark" id="plugins-nav">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="plugins.html">All Plugins</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Equalizers</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Compressors</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Effects</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Limiters</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Others</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">All Plugins</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Equalizers</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Compressors</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Effects</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Limiters</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Others</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -125,66 +125,7 @@
 
 	<!--Content of the page-->
 <div id="container" style="padding-top: 83px;">
-	<div id="banner">
-		<img src="images/early-bird-v2-d.jpg" alt="Promotional banner">
-	</div>
-	<div id="daily-deals" class="mb-5">
-		<div class="flex-container">
-			<div class="card left-card">
-				<div class="card-header">
-					Plugin Deal of the Day
-				</div>
-				<div class="flex-container card-content">
-					<div class="card-img">
-						<img src="images/tune-real-time.jpg" class="card-img-top" alt="plugin image">
-					</div>
-					<div class="card-body">
-						<p class="card-text">Real Time Tune</p>
-						<p class="card-text">Average Price: $39.99</p>
-						<p class="card-text">Today's Price: $29.99</p>
-						<p class="star-rating">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-half.svg" alt="star half filled">
-						</p>
-					</div>
-				</div>
-				<div class="card-footer flex-container">
-					<a href="#" class="btn btn-outline-dark card-btn-left">Go to Waves Site</a>
-					<a href="#" class="btn btn-outline-dark">See more details</a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<div class="card-header">
-					Bundle deal of the Day
-				</div>
-				<div class="flex-container card-content">
-					<div class="card-img">
-						<img src="images/diamond.png" class="card-img-top" alt="bundle image">
-					</div>
-					<div class="card-body">
-						<p class="card-text">Diamond Bundle</p>
-						<p class="card-text">Average Price: $399.99</p>
-						<p class="card-text">Today's Price: $299.99</p>
-						<p class="star-rating">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star-fill.svg" alt="star filled">
-							<img src="bootstrap-icons/star.svg" alt="star half filled">
-						</p>
-					</div>
-				</div>
-				<div class="card-footer flex-container">
-					<a href="#" class="btn btn-outline-dark card-btn-left">Go to Waves Site</a>
-					<a href="#" class="btn btn-outline-dark">See more details</a>
-				</div>
-			</div>
-		</div>
-	</div>
+
 </div>
 
 	<!-------Footer------------>
