finished the search page

--- a/Wavez/Waves-Site/index.html
+++ b/Wavez/Waves-Site/index.html
@@ -101,12 +101,12 @@
 	<div class="dropdown-content">
 		<nav class="navbar navbar-expand-lg navbar-dark" id="plugins-nav">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="plugins.html">All Plugins</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Equalizers</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Compressors</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Effects</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Limiters</a></li>
-				<li class="nav-item"><a class="nav-link" href="plugins.html">Others</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">All Plugins</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">Equalizers</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">Compressors</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">Effects</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">Limiters</a></li>
+				<li class="nav-item"><a class="nav-link" href="search.html">Others</a></li>
 			</ul>
 		</nav>
 	</div>
